--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/kbase
+spring.datasource.url = jdbc:mysql://localhost:3307/kbase
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 # Username and password
-spring.datasource.username ={DBUSER}
-spring.datasource.password ={DBPASS}
+spring.datasource.username =root
+spring.datasource.password =123456
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
@@ -16,3 +17,7 @@ spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+#JWT
+forum.jwt.secret=rm'!@N=Ke!~p8VTasfdqwergdfjfty49836547987234554)(*&&$()(*@#&$)(MNCWwW\J?N,nvH.<2\.r~w]*e~vgak)X"v8H`MH/7"2E`,^k@n<vE-wD3g9JWPy;CrY*.Kd2_D])=><D?YhBaSua5hW%{2]_FVXzb9`8FH^b[X3jzVER&:jw2<=c38=>L/zBq`}C6tT*cCSVC^c]-L}&/
+forum.jwt.expiration=86400000
